<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/new_estexare_btn">

        <LinearLayout android:layout_height="0dp" android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:id="@+id/container_linearLayout">

            <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/app_name_fa"
                    style="@style/TitleStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/result"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/VeryBigMessage"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/placeholder_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/comment"
                      android:layout_marginBottom="@dimen/normal_margin"
                      android:textAlignment="center"
                      android:text="@string/placeholder_comment_fa"/>

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:textAlignment="center"
                          android:gravity="center"
                          android:id="@+id/small_info_container"
                          android:layoutDirection="rtl"
                          android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/sure_label"
                          android:layout_margin="@dimen/very_small_margin"
                          android:text="@string/sure_fa"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/sure"
                          android:text="@string/placeholder_sure_fa"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_margin="@dimen/activity_horizontal_margin"
                          android:text="@string/spacer"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/aye_label"
                          android:layout_margin="@dimen/very_small_margin"
                          android:text="@string/aye_fa"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/aye_no"
                          android:text="@string/placeholder_aye_no_fa"/>
            </LinearLayout>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/aye"
                      android:textAlignment="center"
                      android:text="@string/placeholder_aye_fa"/>

        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/new_estexare_btn"
            android:text="@string/new_estexare_fa"
            android:layout_marginTop="@dimen/normal_margin"
            android:padding="@dimen/large_margin"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>